# gie

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/: Dockerfile  build-app  build-docker
gie/: CMakeLists.txt
gie/include/gie/: Argument.h  DrawableNode.h  Error.h  Graph.h  LogicNode.h  Node.h  NodeDrawable.h  NodeId.h  NodeLogic.h  NodeMetadata.h  NodeType.h  NodeTypeManager.h  NodeUtil.h  Program.h  PythonContext.h  Result.h  SceneGraph.h  Type.h  Value.h
gie/include/gie/ScriptGraph/: Execute.h  ScriptGraph.h
gie/include/gie/detail/: PythonUtils.h
gie/include/gie/execute/: Execute.h
gie/include/gie/util/: Graph.h  Graph.inl
gie/src/: Graph.cpp  Node.cpp  NodeType.cpp  NodeTypeManager.cpp  NodeUtil.cpp  Program.cpp  PythonContext.cpp  SceneGraph.cpp  Value.cpp
gie/src/ScriptGraph/: Execute.cpp  ScriptGraph.cpp
gie/src/execute/: Execute.cpp
gie/src/util/: Graph.cpp
gie/tests/: dev_test.cpp  test.cpp
gie/tests/test_modules/: basic.py
gui/: CMakeLists.txt  Procfile  binding.gyp  build.py  build_debug.py  build_gie.py  config  config-override.js  config-overrides.js  main.cpp  main.js  mainwindow.cpp  mainwindow.h  package-lock.json  package.json  tsconfig.json
gui/gie/: binding.gyp  main.cpp
gui/modules/: colors.py  internals.py
gui/resources/: gui.qrc
gui/scripts/: build.js  start.js  test.js
gui/src/: App.css  App.tsx  Gie.h  GieNodeId.h  Project.cpp  Project.h  ScopedGILRelease.h  editor.cpp  editor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/src/FloatingMenu/: FloatingMenu.css  FloatingMenu.tsx
gui/src/NodeEditor/: NodeEditor.css  NodeEditor.test.js  NodeEditor.tsx
gui/src/NodeEditor/Node/: Node.ts  NodeFactory.tsx  NodeWidget.tsx  PortFactory.ts  PortModel.ts  PortWidget.tsx
gui/src/colorpicker/: colorpicker.cpp  colorpicker.h
gui/src/directorypicker/: directorypicker.cpp
gui/src/exportimage/: exportimage.cpp  exportimage.h  exportimage.ui
gui/src/filepicker/: filepicker.cpp  filepicker.h
gui/src/gie/: GieDataModelRegistry.cpp  GieDataModelRegistry.h  GieNodeDataModel.cpp  GieNodeDataModel.h  NodeProcessingWorker.cpp  NodeProcessingWorker.h  NumberData.h  StringData.h  TypeData.h
gui/src/gie/DisplayNodeDataModel/: ColorDisplayDataModel.cpp  ColorDisplayDataModel.h  GieDisplayDataModel.h  ImageDisplayDataModel.cpp  ImageDisplayDataModel.h  IntegerDisplayDataModel.cpp  IntegerDisplayDataModel.h  NumberDisplayDataModel.cpp  NumberDisplayDataModel.h  PreviewImageDisplayDataModel.cpp  PreviewImageDisplayDataModel.h  StringDisplayDataModel.cpp  StringDisplayDataModel.h  TargetExportImageDataModel.cpp  TargetExportImageDataModel.h
gui/src/gie/SourceNodeDataModel/: ColorSourceDataModel.cpp  ColorSourceDataModel.h  GieSourceDataModel.h  ImageSourceDataModel.cpp  ImageSourceDataModel.h  IntegerSourceDataModel.cpp  IntegerSourceDataModel.h  ManagedImageSourceDataModel.cpp  ManagedImageSourceDataModel.h  NumberSourceDataModel.cpp  NumberSourceDataModel.h  StringSourceDataModel.cpp  StringSourceDataModel.h
gui/src/gie/types/: ColorData.h  ExtractTypes.h  ImageData.h  IntegerData.h  NumberData.h  StringData.h  TypeData.h
gui/src/imageviewer/: imageviewer.cpp
gui/src/importedimagesviewer/: imagecell.h  importedimagesviewer.cpp  importedimagesviewer.h
gui/src/importimage/: importimage.cpp  importimage.h
gui/src/newproject/: newproject.cpp  newproject.h
gui/src/nodeeditor/: BaseNode.h  ComputeNode.h  DisplayNode.h  ExtractTypes.h  NodeEditor.h  SourceNode.h  TypeData.h
gui/src/nodes/: ColorDisplayNode.h  ColorSourceNode.h  GieNode.h  ImageDisplayNode.h  ImageSourceNode.h  IntegerDisplayNode.h  IntegerSourceNode.h  ManagedImageSourceNode.h  NumberDisplayNode.h  NumberSourceNode.h  StringDisplayNode.h  StringSourceNode.h  TargetExportImageNode.h
gui/src/serialisation/: deserialise.h  serialisation.cpp  serialisation.h  serialise.h
gui/src/symbolviewer/: symbolviewer.cpp  symbolviewer.h
gui/src/widgets/colorpicker/: colorpicker.h
gui/src/widgets/colorsample/: colorsample.cpp  colorsample.h
gui/src/widgets/directorypicker/: directorypicker.h
gui/src/widgets/exportimage/: exportimage.h
gui/src/widgets/imageviewer/: imageviewer.cpp  imageviewer.h
gui/src/widgets/importedimagesviewer/: imagecell.cpp  imagecell.h  importedimagesviewer.cpp  importedimagesviewer.h
gui/src/widgets/importimage/: importimage.cpp  importimage.h  importimage.ui
gui/src/widgets/logconsole/: logconsole.cpp  logconsole.h
gui/src/widgets/newproject/: newproject.h  newproject.ui
gui/src/widgets/projectscripts/: projectscripts.cpp  projectscripts.h
gui/src/widgets/savefilepicker/: savefilepicker.cpp  savefilepicker.h
gui/src/widgets/symbolviewer/: symbolviewer.cpp  symbolviewer.h
gui/views/: index.html
include/: Events.h  Graph.h  NodeEditor.h  Render.h  RenderState.h  Shader.h
modules/: CMakeLists.txt
modules/include/: Color.h  Image.h
modules/include/types/: Color.h  Image.h
modules/modules/: arithmetic.py  blur.py  color_correction.py  colors.py  effects.py  glitch.py  images.py  noise.py  string.py
modules/src/: images_internal.cpp  internals.cpp
node-editor/: CMakeLists.txt
node-editor/include/: Camera.h  Events.h  Font.h  Graph.h  GraphCache.h  InputState.h  NodeEditor.h  Render.h  RenderData.h  State.h  Widget.h  WidgetId.h
node-editor/include/detail/: ArithmeticStrongAlias.h  BoundingArea.h  BoundingBox.h  CenteredBox.h  Compute.h  EventVector.h  GeometryBuffer.h  Zip.h
node-editor/scripts/: resource.py  shader.py
node-editor/shaders/: color_space.fragment.glsl  color_space.vertex.glsl  monochrome_gradient.fragment.glsl  monochrome_gradient.vertex.glsl  solid.fragment.glsl  solid.vertex.glsl  stencil_text.fragment.glsl  stencil_text.vertex.glsl  text.fragment.glsl
node-editor/src/: Camera.cpp  Events.cpp  Font.cpp  GraphCache.cpp  NodeEditor.cpp  Render.cpp  RenderData.cpp  State.cpp
scripts/: resource.py  shader.py
shaders/: background_fragment.glsl  (+1 more)
src/: main.cpp  (+8 more)
util/: CMakeLists.txt
util/include/: Expected.h  Graph.h  MaybeError.h  StrongAlias.h
(+6 files in other folders)
